k8s/postgres-replica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-replica
  namespace: sa-thinking-code
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-replica
  template:
    metadata:
      labels:
        app: postgres-replica
    spec:
      containers:
        - name: postgres-replica
          image: sa-postgres-replica
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: replica-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: replica-storage
          persistentVolumeClaim:
            claimName: postgres-replica-pvc
