k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: sa-thinking-code
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: hba-config
              mountPath: /etc/postgresql-custom
          command:
            - "docker-entrypoint.sh"
            - "-c"
            - "hba_file=/etc/postgresql-custom/pg_hba.conf"
      volumes:
        - name: init-scripts
          configMap:
            name: postgres-init-scripts
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: hba-config
          configMap:
            name: postgres-hba-config
