k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: sa-thinking-code
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: sa-auth-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: sa-thinking-code
spec:
  selector:
    app: auth-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
