k8s/eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: sa-thinking-code
spec:
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
