k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: sa-thinking-code
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: sa-order-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: sa-thinking-code
spec:
  selector:
    app: order-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
