k8s/postgres-replica-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-replica
  namespace: sa-thinking-code
spec:
  selector:
    app: postgres-replica
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
